updated r cheat sheet, updated exam 1 activity

--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -12,8 +12,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This document contains R commands that you have learned, as well as a description of what the function does; an example of the function in use; an explanation, in words, of what this usage accomplishes; and where you encountered this function (e.g., "In discussion section 1"). Throughout the quarter, as you learn new R functions, they will be added to this cheat sheet.
 
-| R function name                      | Description                   | Example usage                                                        | Explanation                     | First encountered              |
-|:------------------------------------:|:----------------------------- |:-------------------------------------------------------------------- |:------------------------------- |:------------------------------ |
+| R function name                      | Description                   | Example usage                                                        | Explanation                     | First encountered              | Base R equivalent |
+|:------------------------------------:|:----------------------------- |:-------------------------------------------------------------------- |:------------------------------- |:------------------------------ |:--------------------------- |
 | `print`         | Prints results to the console | `print(32 + 15)` | Print the result of 32 plus 15 | Discussion section 1, line 133 |
 | `<-`            | Assign a value (on the right-hand side) to an object name (on the left-hand side) | `fifteen <- 15` | Assign the value "15" to the object called `fifteen` | Discussion section 1, line 160 |
 | `read.delim`    | Read in a dataset from `.txt` | `read.delim(file = "fev.txt", sep = "", header = TRUE)` | Read in data from the file `fev.txt`; treat any whitespace as a column separator; and read in the first row of the dataset as the column names | Discussion section 1, line 160 |
@@ -35,8 +35,18 @@ This document contains R commands that you have learned, as well as a descriptio
 | `~` | Separate the left- and right-hand sides of a formula. Helps us plot one variable vs another. Will also be useful for fitting regression models (stay tuned). | `boxplot(fev$age ~ fev$smoke)` \ `plot(fev$fev ~ fev$age)` | The variable to the left of the `~` is the response variable and the variable to the right of the `~` is the explanatory variable. When used inside plotting functions, it tells us which variable goes on the y-axis (the response) and which goes on the x-axis (the explanatory). | Chapter 0 slides, slide 0.31 and 0.32 |
 | `plot` | Create a plot. | `plot(fev$fev ~ fev$age)` | Create a scatterplot of two variables, with the fev variable on the y-axis and the age variable on the x-axis.  | Chapter 0 slides, slide 0.32 | 
 | `mean` | Calculate the mean. | `mean(fev$fev)` | Calculates the average value of the fev variable in our fev dataset. | Chapter 0 slides, slide 0.37 | 
-| `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Run a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), the `by=` argument specifies which variable defines the two groups we want to compare, and `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | 
-| `regress` | Run regression. | `regress('mean', fev~age, data = fev)` | Run linear regression(i.e., look at the difference in means) with the variable fev as the outcome and age as the predictor. The argument `data=fev` says which dataset these variables are stored in. | Chapter 1 slides, slide 1.24 |
+| `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Run a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), the `by=` argument specifies which variable defines the two groups we want to compare, and `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | `t.test` |
+| `regress("mean", ...)` | Run linear regression. | `regress('mean', fev~age, data = fev)` | Run linear regression(i.e., look at the difference in means) with the variable fev as the outcome and age as the predictor. The argument `data=fev` says which dataset these variables are stored in. | Chapter 1 slides, slide 1.24 | `lm`, for linear regression
 | `read.table` | Read a dataset from `.txt` | `read.table(file='fev.txt', header=TRUE)` | Read in data from the file `fev.txt` and read in the first row of the dataset as the column names. | Discussion section 2, line 35 |
-| `descrip` | Create table of descriptive stats | `descrip(fev)` \ `descrip(fev, strata=fev$smoker)` | Compute descriptive statistics for every variable in the `fev` dataset. \ Comupte descriptive statistics stratified by smoking status. | Discussion section 2, line 80 |
+| `descrip` | Create table of descriptive stats | `descrip(fev)` \ `descrip(fev, strata=fev$smoker)` | Compute descriptive statistics for every variable in the `fev` dataset. \ Comupte descriptive statistics stratified by smoking status. | Discussion section 2, line 80 |Combination of `summary`, `mean`, `sd`, `median` |
 | `legend` | Add a legend to your plot | `legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = 16)` | Put a legend in the top left corner of the plot, with two categories, Smoker and Nonsmoker, taking the colors red and blue, respectively. | Discussion section 2, line 216 |
+| `set.seed` | Set a seed for the random number generator, ensuring that any random quantities can be computed exactly the same if the code is re-run | `set.seed(47)` | Set the random number seed to `47` | Discussion section 2, line 181 |
+| `runif` | Generate random numbers from a Uniform distribution | `runif(100, 0, 1)` | Generate 100 Uniform(0, 1) random variables | Discussion section 2, line 182 |
+| `points` | Add points to a plot | `points(pre_teen_noisy, fev$fev[fev$teen == 0], pch = 16)` | Add points for pre-teens versus FEV, jittered randomly on the x-axis, and make the points round (pch = 16) | Discussion section 2, line 185 |
+| `axis` | Add an axis to a plot | `axis(side = 1, at = c(0, 1), labels = c("Pre-teen (< 13)", "Teen (13 + )"))` | Add an x-axis label at 0 and 1, labeled "Pre-teen (< 13)" and "Teen (13 + )", respectively | Discussion section 2, line 188 |
+| `box` | Draw a box around a plot | `box()` | Draw a box around the current plot | Discussion section 2, line 192 |
+| `abline` | Draw a line of the form y = ax + b | `abline(a = b0, b = b1, col = 'red')` | Draw a line with intercept `b0`, slope `b1`, and color it red | Discussion section 3, line 252 |
+| `lowess` | Create (x,y) pairs using a loess smoother | `loess <- lowess(x = fev$age, y = fev$fev)` | Create a loess smoother for FEV against age | Discussion section 3, line 286 |
+| `lines` | Add lines to a plot | `lines(loess, col = "blue", lty = 2)` | Add lines for the `loess` object to the current plot; color it blue; and make the line dashed | Discussion section 3, line 187
+| `log` | Log-base-e transform | `log(fev$age)` | Log-transform age | Discussion section 3, line 313 | 
+
