updated cheat sheet

--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -12,41 +12,43 @@ knitr::opts_chunk$set(echo = TRUE)
 
 This document contains R commands that you have learned, as well as a description of what the function does; an example of the function in use; an explanation, in words, of what this usage accomplishes; and where you encountered this function (e.g., "In discussion section 1"). Throughout the quarter, as you learn new R functions, they will be added to this cheat sheet.
 
-| R function name                      | Description                   | Example usage                                                        | Explanation                     | First encountered              | Base R equivalent |
-|:------------------------------------:|:----------------------------- |:-------------------------------------------------------------------- |:------------------------------- |:------------------------------ |:--------------------------- |
-| `print`         | Prints results to the console | `print(32 + 15)` | Print the result of 32 plus 15 | Discussion section 1, line 133 |
-| `<-`            | Assign a value (on the right-hand side) to an object name (on the left-hand side) | `fifteen <- 15` | Assign the value "15" to the object called `fifteen` | Discussion section 1, line 160 |
-| `read.delim`    | Read in a dataset from `.txt` | `read.delim(file = "fev.txt", sep = "", header = TRUE)` | Read in data from the file `fev.txt`; treat any whitespace as a column separator; and read in the first row of the dataset as the column names | Discussion section 1, line 160 |
-| `head` | Print out the first six observations from a dataset (or vector) | `head(fev)` | Print the first six observations from all columns of the `fev` dataset | Discussion section 1, line 162 |
-| `[]` | Access values within a dataset (or vector) | `fev[3, 5]` | Access the third observation (row) in the fifth variable (column) of the `fev` dataset | Discussion section 1, line 181 |
-| `$` | Access a variable (column) within a dataset | `fev$age` | Access the `age` variable within the `fev` dataset | Discussion section 1, line 193 |
-| `>` | Is the object on the left-hand side greater than the object on the right-hand side? | `3 > 5` | Is `3` greater than `5`? (returns `FALSE`) | Discussion section 1, line 200 |
-| `<=` | Is the object on the left-hand side less than or equal to the object on the right-hand side? | `fev$age <= 8` | For each observation of the variable `age` in the `fev` dataset, is this value less than or equal to `8`? (returns `TRUE` or `FALSE` for *each* value in `fev$age`) | Discussion section 1, line 207 |
-| `summary` | Display simple summary statistics (minimum, quartiles, median, mean, maximum) of variables within a dataset | `summary(fev)` | Return summary statistics for all variables in the `fev` dataset | Discussion section 1, line 209 |
-| `ifelse` | Perform a logical expression; if true, take one action; if false, take another action | `ifelse(fev$smoke == 2, 0, 1)` | If `fev$smoke` is equal to 2, return 0; otherwise, return 1 (performs this action for each observation of `fev$smoke`) | Discussion section 1, line 220 |
-| `?` | Access a help file | `?summary` | Pull up the help file for the `summary` function | Discussion section 1, line 234 |
-| `install.packages` | Install an R package | `install.packages("survival")` | Install the package `survival`, which contains functions for survival analysis | Discussion section 1, line 258 |
-| `library` | Load an R package into the current R session (this must be done each time you open R!) | `library("uwIntroStats")` | Load the `uwIntroStats` package of functions into the current session | Discussion section 1, line 259 |
-| `hist` | Create a histogram | `hist(fev$age, xlab="Age (years)", ylab="Frequency", main="Histogram of Age")` | Create a histogram of `fev$age` (the age variable in the dataset called fev). Note that `xlab=`,`ylab=`, and `main=` are all optional arguments: if you supply them, it will update the x-axis, y-axis, and main titles, repsectively. If you just type `hist(fev$age)`, R will still create the same histogram, but with its default axis labels (which often are not very informative or professional looking). | Chapter 0 slides, slide 0.26 |
-| `boxplot` | Create a boxplot | `boxplot(fev$age, xlab="", ylab="Age (years)", main="Boxplot of Age")` | Create a boxplot of a `fev$age`. Like with `hist`, the `xlab`, `ylab`, and `main` are optional arguments that we supply in this example to update the axis and figure titles. | Chapter 0 slides, slide 0.27 |
-| `table` | Create a table of counts for a cateogrical variable | `table(fev$smoke)` | Count how many subjects in our fev dataset fall into the `smoke==1` category (smokers) and the `smoke==2` category (nonsmokers). | Chapter 0 slides, slide 0.28 |
-| `barplot` | Create a barplot | `barplot(table(fev$smoke))` | Create a barplot of the categorical variable `smoke` in the `fev` dataset. We have to provide the `barplot` function the table of counts in each category (from `table(fev$smoke)`) rather than giving it the list of smoking status for each child (`fev$smoke`). As with other types of plotting functions, `xlab`, `ylab`, and `main` are optional arguments that we could include. | Chapter 0 slides, slide 0.28 |
-| `subset` | Extract a subset of your dataset | `subset(fev,smoke==1)` | Create a new dataset that only includes the rows of the `fev` dataset where `smoke==1` (i.e., the data for the kids that smoke). | Chapter 0 slides, slide 0.30 |
-| `~` | Separate the left- and right-hand sides of a formula. Helps us plot one variable vs another. Will also be useful for fitting regression models (stay tuned). | `boxplot(fev$age ~ fev$smoke)` \ `plot(fev$fev ~ fev$age)` | The variable to the left of the `~` is the response variable and the variable to the right of the `~` is the explanatory variable. When used inside plotting functions, it tells us which variable goes on the y-axis (the response) and which goes on the x-axis (the explanatory). | Chapter 0 slides, slide 0.31 and 0.32 |
-| `plot` | Create a plot. | `plot(fev$fev ~ fev$age)` | Create a scatterplot of two variables, with the fev variable on the y-axis and the age variable on the x-axis.  | Chapter 0 slides, slide 0.32 | 
-| `mean` | Calculate the mean. | `mean(fev$fev)` | Calculates the average value of the fev variable in our fev dataset. | Chapter 0 slides, slide 0.37 | 
-| `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Run a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), the `by=` argument specifies which variable defines the two groups we want to compare, and `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | `t.test` |
-| `regress("mean", ...)` | Run linear regression. | `regress('mean', fev~age, data = fev)` | Run linear regression(i.e., look at the difference in means) with the variable fev as the outcome and age as the predictor. The argument `data=fev` says which dataset these variables are stored in. | Chapter 1 slides, slide 1.24 | `lm`, for linear regression
-| `read.table` | Read a dataset from `.txt` | `read.table(file='fev.txt', header=TRUE)` | Read in data from the file `fev.txt` and read in the first row of the dataset as the column names. | Discussion section 2, line 35 |
-| `descrip` | Create table of descriptive stats | `descrip(fev)` \ `descrip(fev, strata=fev$smoker)` | Compute descriptive statistics for every variable in the `fev` dataset. \ Comupte descriptive statistics stratified by smoking status. | Discussion section 2, line 80 |Combination of `summary`, `mean`, `sd`, `median` |
-| `legend` | Add a legend to your plot | `legend("topleft", legend = c("Smoker", "Nonsmoker"), col = c("red", "blue"), pch = 16)` | Put a legend in the top left corner of the plot, with two categories, Smoker and Nonsmoker, taking the colors red and blue, respectively. | Discussion section 2, line 216 |
-| `set.seed` | Set a seed for the random number generator, ensuring that any random quantities can be computed exactly the same if the code is re-run | `set.seed(47)` | Set the random number seed to `47` | Discussion section 2, line 181 |
-| `runif` | Generate random numbers from a Uniform distribution | `runif(100, 0, 1)` | Generate 100 Uniform(0, 1) random variables | Discussion section 2, line 182 |
-| `points` | Add points to a plot | `points(pre_teen_noisy, fev$fev[fev$teen == 0], pch = 16)` | Add points for pre-teens versus FEV, jittered randomly on the x-axis, and make the points round (pch = 16) | Discussion section 2, line 185 |
-| `axis` | Add an axis to a plot | `axis(side = 1, at = c(0, 1), labels = c("Pre-teen (< 13)", "Teen (13 + )"))` | Add an x-axis label at 0 and 1, labeled "Pre-teen (< 13)" and "Teen (13 + )", respectively | Discussion section 2, line 188 |
-| `box` | Draw a box around a plot | `box()` | Draw a box around the current plot | Discussion section 2, line 192 |
-| `abline` | Draw a line of the form y = ax + b | `abline(a = b0, b = b1, col = 'red')` | Draw a line with intercept `b0`, slope `b1`, and color it red | Discussion section 3, line 252 |
-| `lowess` | Create (x,y) pairs using a loess smoother | `loess <- lowess(x = fev$age, y = fev$fev)` | Create a loess smoother for FEV against age | Discussion section 3, line 286 |
-| `lines` | Add lines to a plot | `lines(loess, col = "blue", lty = 2)` | Add lines for the `loess` object to the current plot; color it blue; and make the line dashed | Discussion section 3, line 187
-| `log` | Log-base-e transform | `log(fev$age)` | Log-transform age | Discussion section 3, line 313 | 
+We have added a column that denotes which R package contains each function (note that `base`, `stats`, `graphics`, and `utils` are always loaded whenever you open R), and the corresponding "always loaded package version", if it exists.
+
+| R function name                      | Description                   | Example usage                                                        | Explanation                     | First encountered              | Package | Base R equivalent |
+|:------------------------------------:|:----------------------------- |:-------------------------------------------------------------------- |:------------------------------- |:------------------------------ |:--------------------------- |:--------------------------- |
+| `print`         | Prints results to the console | `print(32 + 15)` | Print the result of 32 plus 15 | Discussion section 1, line 133 | `base`
+| `<-`            | Assign a value (on the right-hand side) to an object name (on the left-hand side) | `fifteen <- 15` | Assign the value "15" to the object called `fifteen` | Discussion section 1, line 160 | `base`
+| `read.delim`    | Read in a dataset from `.txt` | `read.delim(file = "fev.txt", sep = "", header = TRUE)` | Read in data from the file `fev.txt`; treat any whitespace as a column separator; and read in the first row of the dataset as the column names | Discussion section 1, line 160 | `utils`
+| `head` | Print out the first six observations from a dataset (or vector) | `head(fev)` | Print the first six observations from all columns of the `fev` dataset | Discussion section 1, line 162 | `base`
+| `[]` | Access values within a dataset (or vector) | `fev[3, 5]` | Access the third observation (row) in the fifth variable (column) of the `fev` dataset | Discussion section 1, line 181 | `base`
+| `$` | Access a variable (column) within a dataset | `fev$age` | Access the `age` variable within the `fev` dataset | Discussion section 1, line 193 | `base`
+| `>` | Is the object on the left-hand side greater than the object on the right-hand side? | `3 > 5` | Is `3` greater than `5`? (returns `FALSE`) | Discussion section 1, line 200 | `base`
+| `<=` | Is the object on the left-hand side less than or equal to the object on the right-hand side? | `fev$age <= 8` | For each observation of the variable `age` in the `fev` dataset, is this value less than or equal to `8`? (returns `TRUE` or `FALSE` for *each* value in `fev$age`) | Discussion section 1, line 207 | `base`
+| `summary` | Display simple summary statistics (minimum, quartiles, median, mean, maximum) of variables within a dataset | `summary(fev)` | Return summary statistics for all variables in the `fev` dataset | Discussion section 1, line 209 | `base`
+| `ifelse` | Perform a logical expression; if true, take one action; if false, take another action | `ifelse(fev$smoke == 2, 0, 1)` | If `fev$smoke` is equal to 2, return 0; otherwise, return 1 (performs this action for each observation of `fev$smoke`) | Discussion section 1, line 220 | `base`
+| `?` | Access a help file | `?summary` | Pull up the help file for the `summary` function | Discussion section 1, line 234 | `base`
+| `install.packages` | Install an R package | `install.packages("survival")` | Install the package `survival`, which contains functions for survival analysis | Discussion section 1, line 258 | `utils`
+| `library` | Load an R package into the current R session (this must be done each time you open R!) | `library("uwIntroStats")` | Load the `uwIntroStats` package of functions into the current session | Discussion section 1, line 259 | `base`
+| `hist` | Create a histogram | `hist(fev$age, xlab="Age (years)",` \ ` ylab="Frequency", main="Histogram of Age")` | Create a histogram of `fev$age` (the age variable in the dataset called fev). Note that `xlab=`,`ylab=`, and `main=` are all optional arguments: if you supply them, it will update the x-axis, y-axis, and main titles, repsectively. If you just type `hist(fev$age)`, R will still create the same histogram, but with its default axis labels (which often are not very informative or professional looking). | Chapter 0 slides, slide 0.26 |  `graphics`
+| `boxplot` | Create a boxplot | `boxplot(fev$age, xlab="",` \ ` ylab="Age (years)", main="Boxplot of Age")` | Create a boxplot of a `fev$age`. Like with `hist`, the `xlab`, `ylab`, and `main` are optional arguments that we supply in this example to update the axis and figure titles. | Chapter 0 slides, slide 0.27 |  `graphics`
+| `table` | Create a table of counts for a cateogrical variable | `table(fev$smoke)` | Count how many subjects in our fev dataset fall into the `smoke==1` category (smokers) and the `smoke==2` category (nonsmokers). | Chapter 0 slides, slide 0.28 |  `base`
+| `barplot` | Create a barplot | `barplot(table(fev$smoke))` | Create a barplot of the categorical variable `smoke` in the `fev` dataset. We have to provide the `barplot` function the table of counts in each category (from `table(fev$smoke)`) rather than giving it the list of smoking status for each child (`fev$smoke`). As with other types of plotting functions, `xlab`, `ylab`, and `main` are optional arguments that we could include. | Chapter 0 slides, slide 0.28 | `graphics`
+| `subset` | Extract a subset of your dataset | `subset(fev,smoke==1)` | Create a new dataset that only includes the rows of the `fev` dataset where `smoke==1` (i.e., the data for the kids that smoke). | Chapter 0 slides, slide 0.30 | `base`
+| `~` | Separate the left- and right-hand sides of a formula. Helps us plot one variable vs another. Will also be useful for fitting regression models (stay tuned). | `boxplot(fev$age ~ fev$smoke)` \ `plot(fev$fev ~ fev$age)` | The variable to the left of the `~` is the response variable and the variable to the right of the `~` is the explanatory variable. When used inside plotting functions, it tells us which variable goes on the y-axis (the response) and which goes on the x-axis (the explanatory). | Chapter 0 slides, slide 0.31 and 0.32 | `base`
+| `plot` | Create a plot. | `plot(fev$fev ~ fev$age)` | Create a scatterplot of two variables, with the fev variable on the y-axis and the age variable on the x-axis.  | Chapter 0 slides, slide 0.32 | `graphics`
+| `mean` | Calculate the mean. | `mean(fev$fev)` | Calculates the average value of the fev variable in our fev dataset. | Chapter 0 slides, slide 0.37 | `base`
+| `ttest` | Run a t-test. | `ttest(fev$fev, by=fev$sex, var.eq=FALSE)` | Run a two-sample t-test. The first argument specifies the outcome (the variable `fev` in the dataset called `fev`), the `by=` argument specifies which variable defines the two groups we want to compare, and `var.eq=FALSE` says "do not run the equal variances" option (i.e., *do* run the unequal variances option). | Chapter 0 slides, slide 0.55 | `uwIntroStats` | `t.test` |
+| `regress("mean", ...)` | Run linear regression. | `regress('mean', fev~age, data = fev)` | Run linear regression(i.e., look at the difference in means) with the variable fev as the outcome and age as the predictor. The argument `data=fev` says which dataset these variables are stored in. | Chapter 1 slides, slide 1.24 | `uwIntroStats` | `lm`
+| `read.table` | Read a dataset from `.txt` | `read.table(file='fev.txt', header=TRUE)` | Read in data from the file `fev.txt` and read in the first row of the dataset as the column names. | Discussion section 2, line 35 | `utils`
+| `descrip` | Create table of descriptive stats | `descrip(fev)` \ `descrip(fev, strata=fev$smoker)` | Compute descriptive statistics for every variable in the `fev` dataset. \ Comupte descriptive statistics stratified by smoking status. | Discussion section 2, line 80 | `uwIntroStats` | Combination of `summary`, `mean`, `sd`, `median` 
+| `legend` | Add a legend to your plot | `legend("topleft", legend = c("Smoker", "Nonsmoker")` \ `, col = c("red", "blue"), pch = 16)` | Put a legend in the top left corner of the plot, with two categories, Smoker and Nonsmoker, taking the colors red and blue, respectively. | Discussion section 2, line 216 | `graphics`
+| `set.seed` | Set a seed for the random number generator, ensuring that any random quantities can be computed exactly the same if the code is re-run | `set.seed(47)` | Set the random number seed to `47` | Discussion section 2, line 181 | `base`
+| `runif` | Generate random numbers from a Uniform distribution | `runif(100, 0, 1)` | Generate 100 Uniform(0, 1) random variables | Discussion section 2, line 182 | `stats`
+| `points` | Add points to a plot | `points(pre_teen_noisy, fev$fev[fev$teen == 0], pch = 16)` | Add points for pre-teens versus FEV, jittered randomly on the x-axis, and make the points round (pch = 16) | Discussion section 2, line 185 | `graphics`
+| `axis` | Add an axis to a plot | `axis(side = 1, at = c(0, 1),` \ ` labels = c("Pre-teen (< 13)", "Teen (13 + )"))` | Add an x-axis label at 0 and 1, labeled "Pre-teen (< 13)" and "Teen (13 + )", respectively | Discussion section 2, line 188 | `graphics`
+| `box` | Draw a box around a plot | `box()` | Draw a box around the current plot | Discussion section 2, line 192 | `graphics`
+| `abline` | Draw a line of the form y = ax + b | `abline(a = b0, b = b1, col = 'red')` | Draw a line with intercept `b0`, slope `b1`, and color it red | Discussion section 3, line 252 | `graphics`
+| `lowess` | Create (x,y) pairs using a loess smoother | `loess <- lowess(x = fev$age, y = fev$fev)` | Create a loess smoother for FEV against age | Discussion section 3, line 286 | `stats`
+| `lines` | Add lines to a plot | `lines(loess, col = "blue", lty = 2)` | Add lines for the `loess` object to the current plot; color it blue; and make the line dashed | Discussion section 3, line 187 | `graphics`
+| `log` | Log-base-e transform | `log(fev$age)` | Log-transform age | Discussion section 3, line 313 | `base`
 
