--- a/homework/hw6.Rmd
+++ b/homework/hw6.Rmd
@@ -17,13 +17,82 @@ If you give an honest attempt for all questions, you will receive 2 points for c
 
 # 1. Binary outcome and binary predictor (3 points) 
 
+A randomized controlled trial of $N = 600$ smokers is conducted to evaluate whether intensive therapy can help smokers quit (as measured by having quit for an entire year). Assume that smoking is objectively measured, and that individuals adhere to their randomized group.
+
+Data from this study are stored in the `smoking_therapy.txt` dataset (Canvas > Files > Data).
+
+The variable `Group` is binary and indicates which treatment group the individual was in (0 = no therapy, 1 = intensive therapy). The variable `Quit` is a binary variable that indicates whether the subject quit smoking (0 = did not quit, 1 = quit).
+
+## a. (0.5 points) Calculate the risk difference and odds ratio by hand.
+
+**Download the dataset from Canvas, and use R to calculate the numbers that need to go into each of the cells in the following 2 x 2 table.**
+
+```{r code-for-1a,echo=F,eval=F}
+## read in data
+
+## create table (HINT: try the table() function)
+
+```
+
+
+**Group**      | **Quit Smoking** | **Did Not Quit** 
+-------------- | ---------------- | -----------------
+**Therapy **   | Cell 1           | Cell 2
+**No Therapy** | Cell 3           | Cell 4
+ 
+
+**Now, use your table to calculate the risk difference and the odds ratio. Show your work.**
+
+Type your answer here.
+
+## b. (1 point) Fit a simple linear regression model with Quit as the outcome and Group as the predictor. 
+
+```{r code-for-1b,echo=F,eval=F}
+
+```
+
+**Interpret the estimated intercept and slope. How do these results relate to your calculation in (a)?**
+
+Type your answer here.
+
+**Write a paragraph summarizing the results of this analysis.**
+
+Report your results here.
+
+
+## c. (1 point) Fit a simple logistic regression model with Quit as the outcome and Group as the predictor. 
+
+```{r code-for-1c,echo=F,eval=F}
+
+```
+
+**Interpret the estimated intercept and slope. How do these results relate to your calculation in (a)?**
+
+Type your answer here.
+
+**Write a paragraph summarizing the results of this analysis.**
+
+Report your results here.
+
+## d. (0.5 points) Use your estimated slope and intercept from part (c) to estimate the probability of quitting in the no therapy group and the probability of quitting in the therapy group. Show your work.
+
+Type your answer here.
+
+**Now, estimate those same probabilities using your table in part (a). How do your estimated probabilities compare to the ones you got from your logistic regression model?**
+
+Type your answer here.
+
 \newpage
 
 # 2. Multiple logistic regression (3 points)
 
 \newpage
 
-# 3. Logistic regression in case-control studies (2 points)
+# 3. Case-control studies (1 points)
+
+**Explain why we can/cannot estimate the probability of disease (i.e., disease prevalance) from a case-control study.**
+
+Type your answer here.
 
 \newpage
 
